--- a/V1.html
+++ b/V1.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Este es el archivo original</h1>
+    <h1>Intento de cambio a la version 2 de el archivo </h1>
 </body>
 </html>
