--- a/V1.html
+++ b/V1.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Intento de cambio a la version 2 de el archivo </h1>
+    <p>Actualizacion de la version 2</p>
 </body>
 </html>
