Modifique la v2, es mejor

--- a/V1.html
+++ b/V1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Intento de cambio a la version 2 de el archivo </h1>
-    <p>Actualizacion de la version 2</p>
+    <h1>La neta me gusta mas este titulo</h1>
+    <p>esta es la version 3 de PapiElmo</p>
 </body>
 </html>
