--- a/V1.html
+++ b/V1.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>La neta me gusta mas este titulo</h1>
-    <p>esta es la version 3 de PapiElmo</p>
+    <h1>Mi version te va a generar conflicto </h1>
+    <p>esta es la version de conflicto de PapiElmo</p>
+    <p>jeje saludos bribon</p>
 </body>
 </html>
