--- a/V1.html
+++ b/V1.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>La neta me gusta mas este titulo</h1>
-    <p>esta es la version 3 de PapiElmo</p>
+    <h1>Esta es la version 3 del archivo</h1>
 </body>
 </html>
